[gd_scene load_steps=4 format=3 uid="uid://cuasked0hoksw"]

[ext_resource type="Script" uid="uid://ciesjc3g27qxn" path="res://scripts/ChessBoardLocation.gd" id="1_tp323"]
[ext_resource type="FontFile" uid="uid://cw6j0eugbiyjx" path="res://fonts/OpenChessFont.ttf" id="2_ui4ow"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_p0vlq"]

[node name="BoardLocation" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tp323")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(196, 196)
layout_mode = 1
offset_right = 128.0
offset_bottom = 128.0
mouse_filter = 1

[node name="BoardLocationName" type="Label" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 17.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "xx"

[node name="BoardLocationDescription" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 136.0
offset_bottom = 80.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "BoardLocation Description"
autowrap_mode = 2

[node name="BoardLocationImageBorder" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 180.0
offset_bottom = 180.0
color = Color(0, 0, 0, 1)

[node name="BoardLocationImage" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 180.0
offset_bottom = 180.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("CompressedTexture2D_p0vlq")
expand_mode = 1
stretch_mode = 5

[node name="BoardLocationChallengeImage" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 180.0
offset_bottom = 180.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("CompressedTexture2D_p0vlq")
expand_mode = 1
stretch_mode = 5

[node name="BoardLocationChallengeIconBackground" type="ColorRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
offset_left = 16.0
offset_top = 148.0
offset_right = 48.0
offset_bottom = 180.0
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="BoardLocationChallengeIcon" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 148.0
offset_right = 52.0
offset_bottom = 184.0
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ui4ow")
theme_override_font_sizes/font_size = 36
text = "x"

[connection signal="mouse_entered" from="." to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_mouse_exited"]
